*compilation*
-*- mode: compilation; default-directory: "~/桌面/cmake/calculator/" -*-
Compilation started at Sun May 15 14:49:09

cmake --build .
[ 33%] Built target test
[ 66%] Built target main
Scanning dependencies of target ctl
[ 83%] Building CXX object calctree/CMakeFiles/ctl.dir/main.cpp.o
/home/jiangmingrui/桌面/cmake/calculator/calctree/main.cpp:37:35: error: expected ';' at end of declaration
                  auto p=make_unique<calctree>()
                                                ^
                                                ;
/home/jiangmingrui/桌面/cmake/calculator/calctree/main.cpp:46:9: error: no matching member function for call
      to 'push'
                                opt.push(p);
                                ~~~~^~~~
/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_stack.h:233:7: note: candidate function
      not viable: no known conversion from 'calctree *' to 'const std::stack<std::unique_ptr<calctree,
      std::default_delete<calctree> >, std::deque<std::unique_ptr<calctree, std::default_delete<calctree> >,
      std::allocator<std::unique_ptr<calctree, std::default_delete<calctree> > > > >::value_type' (aka 'const
      std::unique_ptr<calctree, std::default_delete<calctree> >') for 1st argument
      push(const value_type& __x)
      ^
/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_stack.h:238:7: note: candidate function
      not viable: no known conversion from 'calctree *' to 'std::stack<std::unique_ptr<calctree,
      std::default_delete<calctree> >, std::deque<std::unique_ptr<calctree, std::default_delete<calctree> >,
      std::allocator<std::unique_ptr<calctree, std::default_delete<calctree> > > > >::value_type' (aka
      'std::unique_ptr<calctree, std::default_delete<calctree> >') for 1st argument
      push(value_type&& __x)
      ^
/home/jiangmingrui/桌面/cmake/calculator/calctree/main.cpp:60:9: error: no viable conversion from returned
      value of type '__gnu_cxx::__alloc_traits<std::allocator<std::unique_ptr<calctree,
      std::default_delete<calctree> > >, std::unique_ptr<calctree, std::default_delete<calctree> >
      >::value_type' (aka 'std::unique_ptr<calctree, std::default_delete<calctree> >') to function return type
      'calctree *'
        return num.top();
               ^~~~~~~~~
In file included from /home/jiangmingrui/桌面/cmake/calculator/calctree/main.cpp:1:
In file included from /home/jiangmingrui/桌面/cmake/calculator/calctree/mainlib.cpp:2:
In file included from /bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/vector:64:
In file included from /bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/allocator.h:46:
In file included from /bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/x86_64-linux-gnu/c++/9/bits/c++allocator.h:33:
/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/ext/new_allocator.h:146:23: error: call to deleted
      constructor of 'std::unique_ptr<calctree, std::default_delete<calctree> >'
        { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
                             ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/alloc_traits.h:483:8: note: in instantiation
      of function template specialization '__gnu_cxx::new_allocator<std::unique_ptr<calctree,
      std::default_delete<calctree> > >::construct<std::unique_ptr<calctree, std::default_delete<calctree> >,
      const std::unique_ptr<calctree, std::default_delete<calctree> > &>' requested here
        { __a.construct(__p, std::forward<_Args>(__args)...); }
              ^
/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_deque.h:1574:21: note: in instantiation of
      function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<calctree,
      std::default_delete<calctree> > > >::construct<std::unique_ptr<calctree, std::default_delete<calctree> >,
      const std::unique_ptr<calctree, std::default_delete<calctree> > &>' requested here
            _Alloc_traits::construct(this->_M_impl,
                           ^
/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_stack.h:234:11: note: in instantiation of
      member function 'std::deque<std::unique_ptr<calctree, std::default_delete<calctree> >,
      std::allocator<std::unique_ptr<calctree, std::default_delete<calctree> > > >::push_back' requested here
      { c.push_back(__x); }
          ^
/home/jiangmingrui/桌面/cmake/calculator/calctree/main.cpp:31:8: note: in instantiation of member function
      'std::stack<std::unique_ptr<calctree, std::default_delete<calctree> >,
      std::deque<std::unique_ptr<calctree, std::default_delete<calctree> >,
      std::allocator<std::unique_ptr<calctree, std::default_delete<calctree> > > > >::push' requested here
          opt.push(p);
              ^
/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/unique_ptr.h:414:7: note: 'unique_ptr' has
      been explicitly marked deleted here
      unique_ptr(const unique_ptr&) = delete;
      ^
/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/unique_ptr.h:857:34: error: no matching
      constructor for initialization of 'calctree'
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/jiangmingrui/桌面/cmake/calculator/calctree/main.cpp:55:29: note: in instantiation of function template
      specialization 'std::make_unique<calctree, std::unique_ptr<calctree, std::default_delete<calctree> > &>'
      requested here
                      num.push(::as_const(make_unique<calctree>(opt.top())));
                                          ^
/home/jiangmingrui/桌面/cmake/calculator/calctree/mainlib.cpp:21:8: note: candidate constructor
      (the implicit copy constructor) not viable: no known conversion from 'std::unique_ptr<calctree,
      std::default_delete<calctree> >' to 'const calctree' for 1st argument
struct calctree{
       ^
/home/jiangmingrui/桌面/cmake/calculator/calctree/main.cpp:9:11: note: candidate constructor not viable:
      requires 0 arguments, but 1 was provided
calctree::calctree(){
          ^
5 errors generated.
make[2]: *** [calctree/CMakeFiles/ctl.dir/build.make:63：calctree/CMakeFiles/ctl.dir/main.cpp.o] 错误 1
make[1]: *** [CMakeFiles/Makefile2:152：calctree/CMakeFiles/ctl.dir/all] 错误 2
make: *** [Makefile:84：all] 错误 2

Compilation exited abnormally with code 2 at Sun May 15 14:49:09
